--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "http-status": "^2.1.0",
+    "http-status": "1.7.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "zod": "^3.24.2"
