--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "rimraf ./dist && tsc",
     "start": "node dist/app.js",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node -r tsconfig-paths/register' src/app.ts",
     "lint": "eslint 'src/**/*.ts'"
@@ -21,6 +21,7 @@
     "http-status": "1.7.4",
     "jsonwebtoken": "8.5.1",
     "mongoose": "^8.13.2",
+    "rimraf": "3.0.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
