--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf ./dist && tsc",
+    "build": "rimraf ./dist && tsc --project tsconfig.json",
     "start": "node dist/app.js",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node -r tsconfig-paths/register' src/app.ts",
     "lint": "eslint 'src/**/*.ts'"
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "http-status": "1.7.4",
     "jsonwebtoken": "8.5.1",
+    "module-alias": "^2.2.3",
     "mongoose": "^8.13.2",
     "rimraf": "3.0.2",
     "zod": "^3.24.2"
@@ -37,5 +38,18 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
+  },
+  "_moduleAliases": {
+    "@": "dist",
+    "@controllers": "dist/controllers",
+    "@models": "dist/models",
+    "@routes": "dist/routes",
+    "@services": "dist/services",
+    "@utils": "dist/utils",
+    "@middlewares": "dist/middlewares",
+    "@config": "dist/config",
+    "@repos": "dist/repositories",
+    "@validations": "dist/validations",
+    "@constants": "dist/constants"
   }
 }
