--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
       "@validations/*": ["src/validations/*"],
       "@constants": ["src/constants/*"]
     },
-    "typeRoots": ["src/@types", "./node_modules/@types"],
+    "typeRoots": ["src/@types", "node_modules/@types"],
     "outDir": "./dist",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
