--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "rimraf ./dist && tsc --project tsconfig.json",
     "start": "node dist/app.js",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node -r tsconfig-paths/register' src/app.ts",
+    "test": "jest --coverage",
     "lint": "eslint 'src/**/*.ts'"
   },
   "keywords": [],
@@ -16,25 +17,30 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-status": "1.7.4",
+    "jest": "^29.7.0",
     "jsonwebtoken": "8.5.1",
     "module-alias": "^2.2.3",
     "mongoose": "^8.13.2",
     "rimraf": "3.0.2",
+    "supertest": "^7.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/express-serve-static-core": "^5.0.6",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "8.5.8",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.14.1",
     "eslint": "^9.24.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3",
+    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
